fix a bug of navbar attribute of aria-controls that found by W3C Compliant

--- a/styles/style.css
+++ b/styles/style.css
@@ -131,7 +131,7 @@ body {
   position: absolute;
   width: 16px;
   height: 16px;
-  background-color: #ffb3e6;
+  background-color: skyblue;
   left: -28px;
   top: 30px;
   border-radius: 50%;
