--- a/styles/style.css
+++ b/styles/style.css
@@ -14,6 +14,15 @@ body {
   padding: 100px 40px;
 }
 
+.theme-btn {
+  display: flex;
+  height: 40px;
+  width: 24px;
+  align-items: center;
+  padding-left: 0.5rem;
+  margin: 0;
+}
+
 .navbar {
   position: fixed;
   width: 100%;
