--- a/styles/style.css
+++ b/styles/style.css
@@ -19,7 +19,7 @@ body {
   height: 40px;
   width: 24px;
   align-items: center;
-  padding-left: 0.5rem;
+  padding-left: 8px;
   margin: 0;
 }
 
@@ -37,10 +37,11 @@ body {
 }
 
 .title {
-  font-size: 2.5rem;
+  font-size: 32px;
   color: #66bfbf;
   font-family: "Montserrat", sans-serif;
   font-weight: normal;
+  padding-top: 40px;
   padding-bottom: 10px;
 }
 
@@ -72,18 +73,19 @@ body {
   border: none;
   list-style: none;
   justify-content: center;
-  font-size: 2rem;
+  font-size: 30px;
 }
 
 .list-group-item {
   border: none;
-  margin-bottom: 2rem;
+  background-color: transparent;
+  margin-bottom: 30px;
 }
 
 /*ABOUT SECTION*/
 .section-title {
-  font-size: 2rem;
-  margin-bottom: 2rem;
+  font-size: 32px;
+  margin-bottom: 30px;
   font-family: "Maven Pro", sans-serif;
 }
 
@@ -99,8 +101,8 @@ body {
 
 #myPhoto {
   width: 40%;
-  border-radius: 0.5rem;
-  margin-bottom: 2rem;
+  border-radius: 6px;
+  margin-bottom: 24px;
 }
 
 /*SKILLS SECTION*/
@@ -165,11 +167,11 @@ body {
 
 .copyright {
   color: #eaf6f6;
-  font-size: 0.75rem;
+  font-size: 16px;
   padding: 20px 0;
 }
 .footer-link {
-  color: #8898aa;
+  color: #fff;
   text-decoration: none;
   padding: 0 20px;
 }
